Fix inline code wrapping (#582)
* Fix inline code wrapping

* Unset when its a pre code

* cleanup

--- a/src/Elastic.Markdown/Assets/markdown/code.css
+++ b/src/Elastic.Markdown/Assets/markdown/code.css
@@ -15,6 +15,7 @@
 					p-6!
 				;
 				background-color: #22272e;
+				mix-blend-mode: unset;
 			}
 			code:first-child {
 				@apply rounded-t-sm;
@@ -73,8 +74,6 @@
 		rounded-xs
 		border-1
 		border-gray-300
-		inline-block
-		text-nowrap
 		;
 		font-size: 0.875em;
 		line-height: 1.4em;
@@ -83,6 +82,7 @@
 		letter-spacing: 0.02em;
 		text-decoration: inherit;
 		font-weight: inherit;
+		mix-blend-mode: multiply;
 	}
 
 
